fix-BLD-32a6: Fixed small error on structures build page. Also some misc changes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,22 +9,34 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a5
+Текущая версия 32a6
 -------------------
 
 [~] Скины: Обновлен скин СН/Иваш
+[~] Флоты: Теоретическая емкость флота увеличена до BIGINT(20) по каждому  типу
+    ресурсов
 [~] Постройки:  Показываются  все  возможные  строения  на  планете/луне.  Если
     невозможно осуществить постройку - показывается причина
     Иконки  информации  и   своза   ресурсов   поменялись   местами,   что   бы
     соответствовать  расположению  иконки  своза  ресурсов  на  списке   планет
     (Обзор/Империя)
-[~] Флоты: Теоретическая емкость флота увеличена до BIGINT(20) по каждому  типу
-    ресурсов
+[~] Постройки: Теперь при невозможности постройки юнита не затемняется название
+    и текущий уровень юнита
+[~] Постройки: В описании юнитов разнесены ссылки на  постройку  и  уничтожение
+    юнита во избежании случайного выбора не того действия
+
+[#] Постройки: Ссылки на создание и  уничтожение  юнитов  раскрашены  в  цвета,
+    согласно  CSS  (по  умолчанию:  зеленый  для  создания,   красный   -   для
+    уничтожения)
 
 [%] Вселенная: Исправлена ошибка с запуском  отрицательного  количества  юнитов
     через AJAX
 [%] Альянсы: Исправлена ошибка с неотображением тэга  у  членов  новосозданного
     Альянса
+[%] Постройки: Исправлена ошибка  с  невозможностью  выбора  превьюшки  здания,
+    которое нельзя построить
+[%] Постройки: Исправлена ошибка с невозможностью уничтожить  постройку,  когда
+    не хватает ресурсов на создание постройки, но хватает на её уничтожение
 
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
