feat-SYS-32: Improved engine to work correctly with large numbers - internal IDs and resource/units amount

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,17 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a6
+Текущая версия 32a7
 -------------------
+
+[!] Исправлена работа с большими числами:
+      Все числовые значение в HTTP-запросах трактуются как  числа  с  плавающей
+      запятой. Все идентификаторы передаются как строки
+      Все идентификаторы в  БД  являются  BIGINT(20).  Соответствующим  образом
+      переконфигурированы (добавлены или изменены) FOREIGHN KEYS
+      Переработаны  все  таблицы,  что  бы  исключить  переполнение  при  любом
+      разумном сценарии  использования  движка  (скажем,  вплоть  до  скоростей
+      x1000000)
 
 [~] Скины: Обновлен скин СН/Иваш
 [~] Флоты: Теоретическая емкость флота увеличена до BIGINT(20) по каждому  типу
@@ -37,6 +46,8 @@
     которое нельзя построить
 [%] Постройки: Исправлена ошибка с невозможностью уничтожить  постройку,  когда
     не хватает ресурсов на создание постройки, но хватает на её уничтожение
+[%] Флоты: Исправлена ошибка при загрузки в  трюмы  одного  ресурса  более  чем
+    PHP_MAX_INT
 
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
