misc-BLD-32a9: Adjusted structure size. JS moved to separate file

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a7
+Текущая версия 32a9
 -------------------
 
 [!] Исправлена работа с большими числами:
@@ -33,6 +33,10 @@
     и текущий уровень юнита
 [~] Постройки: В описании юнитов разнесены ссылки на  постройку  и  уничтожение
     юнита во избежании случайного выбора не того действия
+[~] Постройки: Из темплейта постройки задний яваскрипт вынесен в отдельный файл
+[~] Постройки: Увеличено  место  для  картинки  здания  до  150  пикселей.  Это
+    предотвратит "скачки"  описания  постройки  при  перемещении  выделения  на
+    иконках
 
 [#] Постройки: Ссылки на создание и  уничтожение  юнитов  раскрашены  в  цвета,
     согласно  CSS  (по  умолчанию:  зеленый  для  создания,   красный   -   для
@@ -48,6 +52,8 @@
     не хватает ресурсов на создание постройки, но хватает на её уничтожение
 [%] Флоты: Исправлена ошибка при загрузки в  трюмы  одного  ресурса  более  чем
     PHP_MAX_INT
+[%] Админка: Исправлена ошибка самопроизвольного сброса  флага  масштабирования
+    хранилищ
 
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
