feat-ECO-32a10: Added to production structures hint with upgrade effects. Energy now scales according to resource gathering speed

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a9
--------------------
+Текущая версия 32a10
+--------------------
 
 [!] Исправлена работа с большими числами:
       Все числовые значение в HTTP-запросах трактуются как  числа  с  плавающей
@@ -20,6 +20,9 @@
       Переработаны  все  таблицы,  что  бы  исключить  переполнение  при  любом
       разумном сценарии  использования  движка  (скажем,  вплоть  до  скоростей
       x1000000)
+
+[+] Постройки:  На   ресурсогенерящие   постройки   добавлена   подсказка   по
+    производительности
 
 [~] Скины: Обновлен скин СН/Иваш
 [~] Флоты: Теоретическая емкость флота увеличена до BIGINT(20) по каждому  типу
@@ -37,6 +40,8 @@
 [~] Постройки: Увеличено  место  для  картинки  здания  до  150  пикселей.  Это
     предотвратит "скачки"  описания  постройки  при  перемещении  выделения  на
     иконках
+[~] Экономика: Производство и потребление электроэнергии теперь  масштабируется
+    согласно скорости добычи
 
 [#] Постройки: Ссылки на создание и  уничтожение  юнитов  раскрашены  в  цвета,
     согласно  CSS  (по  умолчанию:  зеленый  для  создания,   красный   -   для
