misc-BLD-32a12: Minor adjustment to hangar interface. Restricted maximum que length in hangar

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a10
+Текущая версия 32a12
 --------------------
 
 [!] Исправлена работа с большими числами:
@@ -42,6 +42,8 @@
     иконках
 [~] Экономика: Производство и потребление электроэнергии теперь  масштабируется
     согласно скорости добычи
+[~] Верфь: Обновлен интерфейс верфи
+[~] Верфь: Ограничено максимальное количество строящихся юнитов на верфи
 
 [#] Постройки: Ссылки на создание и  уничтожение  юнитов  раскрашены  в  цвета,
     согласно  CSS  (по  умолчанию:  зеленый  для  создания,   красный   -   для
