misc-ECO-32a13: Increased crystal outcome and energy consumption for crystal synthetizer

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a12
+Текущая версия 32a13
 --------------------
 
 [!] Исправлена работа с большими числами:
@@ -44,6 +44,8 @@
     согласно скорости добычи
 [~] Верфь: Обновлен интерфейс верфи
 [~] Верфь: Ограничено максимальное количество строящихся юнитов на верфи
+[~] Экономика:  Увеличена  базовая  добыча  шахты  кристаллов  с  20  до   32.
+    Соответственно увеличено энергопотребление с 10 до 16
 
 [#] Постройки: Ссылки на создание и  уничтожение  юнитов  раскрашены  в  цвета,
     согласно  CSS  (по  умолчанию:  зеленый  для  создания,   красный   -   для
@@ -61,6 +63,8 @@
     PHP_MAX_INT
 [%] Админка: Исправлена ошибка самопроизвольного сброса  флага  масштабирования
     хранилищ
+[%] Друзья: Исправлена надпись с неправильной кодировкой при ответе  на  письмо
+    друга/кандидата
 
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
