misc-STAT: Stats storign 10 days. Stat calculating now non-transactional

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -46,6 +46,8 @@
 [~] Верфь: Ограничено максимальное количество строящихся юнитов на верфи
 [~] Экономика:  Увеличена  базовая  добыча  шахты  кристаллов  с  20  до   32.
     Соответственно увеличено энергопотребление с 10 до 16
+[~] Статистика:  Статистика  теперь  считается  не  в  транзакции,  что  бы  не
+    блокировать игроков. Сохраняется статистика за 10 дней
 
 [#] Постройки: Ссылки на создание и  уничтожение  юнитов  раскрашены  в  цвета,
     согласно  CSS  (по  умолчанию:  зеленый  для  создания,   красный   -   для
