misc-SYS-32a15: Rewrited records page. Sturctures IDs replaced with constants STRUC_XXX

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a14
+Текущая версия 32a15
 --------------------
 
 [!] Исправлена работа с большими числами:
@@ -48,6 +48,7 @@
     Соответственно увеличено энергопотребление с 10 до 16
 [~] Статистика:  Статистика  теперь  считается  не  в  транзакции,  что  бы  не
     блокировать игроков. Сохраняется статистика за 10 дней
+[~] Рекорды: Переписана страница рекордов
 
 [#] Постройки: Ссылки на создание и  уничтожение  юнитов  раскрашены  в  цвета,
     согласно  CSS  (по  умолчанию:  зеленый  для  создания,   красный   -   для
@@ -69,6 +70,14 @@
     друга/кандидата
 [%] Исправлена уязвимость, позволяющая быстрыми многократными  постройками  или
     отменами добиться увеличения ресурсов
+[%] Рекорды: Исправлена ошибка, когда в списке  рекордсменов  появлялись  члены
+    команды сервера
+
+[@] PTE: Парсер темплейтов теперь понимает конструкции вида  {L_tech[D_CONST]},
+    которые будут развернуты в $lang['tech'][CONST]
+[@] eco_get_build_data() возвращает  время  постройки  в  отдельном  подмассиве
+    RES_TIME, а не в массивах действий BLD_CREATE/BLD_DESTROY
+[@] Числовые идентификаторы для строений заменены константами STRUC_xxx
 
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
