feat-SYS-32c0: Project SuperNova.WS Release 32 RC

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,11 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a16
+Текущая версия 32c0
 --------------------
+
+Project "SuperNova.WS" Release 32 RC "Happy New Year v2012!"
+============================================================
 
 [!] Исправлена работа с большими числами:
       Все числовые значение в HTTP-запросах трактуются как  числа  с  плавающей
@@ -25,8 +28,6 @@
     производительности
 
 [~] Скины: Обновлен скин СН/Иваш
-[~] Флоты: Теоретическая емкость флота увеличена до BIGINT(20) по каждому  типу
-    ресурсов
 [~] Постройки:  Показываются  все  возможные  строения  на  планете/луне.  Если
     невозможно осуществить постройку - показывается причина
     Иконки  информации  и   своза   ресурсов   поменялись   местами,   что   бы
@@ -62,8 +63,6 @@
     которое нельзя построить
 [%] Постройки: Исправлена ошибка с невозможностью уничтожить  постройку,  когда
     не хватает ресурсов на создание постройки, но хватает на её уничтожение
-[%] Флоты: Исправлена ошибка при загрузки в  трюмы  одного  ресурса  более  чем
-    PHP_MAX_INT
 [%] Админка: Исправлена ошибка самопроизвольного сброса  флага  масштабирования
     хранилищ
 [%] Друзья: Исправлена надпись с неправильной кодировкой при ответе  на  письмо
@@ -73,6 +72,7 @@
 [%] Рекорды: Исправлена ошибка, когда в списке  рекордсменов  появлялись  члены
     команды сервера
 
+[@] DB: Обновлен дамп БД до версии 32
 [@] PTE: Парсер темплейтов теперь понимает конструкции вида  {L_tech[D_CONST]},
     которые будут развернуты в $lang['tech'][CONST]
 [@] eco_get_build_data() возвращает  время  постройки  в  отдельном  подмассиве
