--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,10 +9,10 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32c1
+Текущая версия 32d0
 --------------------
 
-Project "SuperNova.WS" Release 32 RC "Happy New Year v2012!"
+Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
 ============================================================
 
 [!] Исправлена работа с большими числами:
