misc-BLD-33a0: Preventing width jumping when traversing unit preview on structures page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,13 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32d0
+Текущая версия 33a0
 --------------------
+
+[~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
+    Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
+    предотвращает "баян" - прыжки ширины таблицы построек
+
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
 ============================================================
