misc-STA-33a1: Optimized statistic calculations. Disabled planet stat update

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,12 +9,18 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a0
+Текущая версия 33a1
 --------------------
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
     предотвращает "баян" - прыжки ширины таблицы построек
+[~] Император: Теперь на  страницы  показывается  так  же  очки  за  ресурсы  и
+    исследования. Немного переформатирована таблица статистики
+[~] Статистика:  Оптимизирован   алгоритм   подсчета   статистики.   Отключено
+    обновление "очков планеты"
+
+[@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
