fix-AFF-33a2: Fixed wrong display for gained dark matter

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a1
+Текущая версия 33a2
 --------------------
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
@@ -19,6 +19,8 @@
     исследования. Немного переформатирована таблица статистики
 [~] Статистика:  Оптимизирован   алгоритм   подсчета   статистики.   Отключено
     обновление "очков планеты"
+
+[%] Партнерка: Исправлено отображения количества начисленных ТМ
 
 [@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
 
