--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a2
+Текущая версия 33a3
 --------------------
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
@@ -19,6 +19,7 @@
     исследования. Немного переформатирована таблица статистики
 [~] Статистика:  Оптимизирован   алгоритм   подсчета   статистики.   Отключено
     обновление "очков планеты"
+[~] Чат: Теперь при таймауте чата скрипт поллинга полностью прекращает работу
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 
