misc-ECO-33a4: Build time normalized by deuterium. Building speed overally increased

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a3
---------------------
+Текущая версия 33a4
+-------------------
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
@@ -20,6 +20,10 @@
 [~] Статистика:  Оптимизирован   алгоритм   подсчета   статистики.   Отключено
     обновление "очков планеты"
 [~] Чат: Теперь при таймауте чата скрипт поллинга полностью прекращает работу
+[~] Экономика: При расчете  времени  постройки  юнитов  учитывается  не  только
+    количество ресурсов, но и  их  качество.  Время  постройки  нормированы  по
+    дейтрию, т.е. постройки с большей долей  низкоуровневых  ресурсов  строятся
+    быстрее
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 
