feat-SYS-33a5: Added support for server-side player avatar. Added display of player sex

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,18 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a4
+Текущая версия 33a5
 -------------------
+
+[!] Аватары: Добавлена поддержка серверных аватаров игроков. Аватары могут быть
+    загружены  с  локального   диска   на   странице   настроек   пользователя.
+    Поддерживаются файлы форматов JPG, GIF и PNG размером до 200КБ. Загруженные
+    картинки будут отмасштабированы до размеров 128х128
+    Аватар отображается на странице "Император" и в попапе игрока  на  странице
+    "Вселенная"
+
+[+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
+    игрока на странице "Вселенная"
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
@@ -28,6 +38,12 @@
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 
 [@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
+[@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
+    корректно настроен временный каталог и движку должна быть разрешена  запись
+    в каталог /images/avatar
+[@] Пол: В скины добавлена иконка пола в подкаталог "images" скина.  Файлы  для
+    мужского  и  женского  пола  называются  соответственно  "sex_male.png"   и
+    "sex_female.png". Встроенные скины обновлены автоматически
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
