--- a/docs/install.txt
+++ b/docs/install.txt
@@ -67,6 +67,7 @@ CentOS + lighttpd + XCache.
 список подсистем и соответствующих файлов/папок
 [*] Подсистема кэширования темплейтов - каталог  /cache.  Без  этого  темплейты
     каждый раз будут рендериться заново
+[*] Подсистема аватаров нуждается в доступе на запись в каталог /images/avatar
 [*] Для работы подсистемы предупреждения о попытках взлома аккаунту веб-сервера
     должна быть разрешена  запись  на  диск  в  файл  /badqrys.txt.  Без  этого
     "плохие" запросы не будут сохранятся
