--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -8,81 +8,36 @@
     разницу температур на 1-2 градуса было
 
 [*] Транзакционность и блокируемость очереди построек!
-[*] Возвращаясь к Очереди постройки.... Все бы хорошо..да вот только может  всё
-    таки её списком сделать? когда меню построек зданий  рисунками,это  конечно
-    очень удобно=) но вот саму бы очередь постройки  хотелось  бы  списком,  по
-    человечески...не  такая  уж  она  и  длинная  будет,  а  так....строчка   с
-    квадратиками..непонятно где чё,только при наведении видно, плохо...
 
-[*] Список планет: Сделать полнофункциональную  очередь  зданий  (а  не  только
-    текущее)
 [*] Резервирование очереди (с особым офицером)
 
 [*] Пересчет времени строительства  в  очереди  построек  при  найме  офицеров,
     постройке ускоряющих зданий итд
-[*] Еще было удобно то, что когда ставишь в очередь постройки здание,  писалось
-    например 10+1,  а  не  11  сразу  как  сейчас(то  есть,пока  не  закончится
-    постройка здания уровень был n+1)
 
 [~] Вернуть на страницу 2 флота возможность выбирать тип атаки при выборе САБа
 
 [*] Просмотреть все файлы на предмет изменения переменной planet['last_update']
     и добавить вызов функции обновления очереди
 
-[*] Добавить блокировку таблиц и транзакции в update.php
-
-[*] На странице инфо для структур учитывать текущих офицеров (?)  и  технологии
-    (??) - для электростанции производство точно нужно
-
 [*] а то седня я летал в сабе, я создавал, кидал приглашение, но  не  мог  даже
 посмотреть подсоединился игрок или нет к САБу. Было бы  неплохо  видеть,  а  то
-мало ли что.
-Сделать для соаловцев и для союзных альянсов
+мало ли что. Сделать для соаловцев и для союзных альянсов
 
 
-Изложу в одном посте планы по развитию сервера. Если вы читали внимательно форум, то все это вы уже видели.
-
-О движке:[list=1]
-[*] Данный сервер базируется на движке XNova RageRepack v226.
-[*] В движок внесено огромное количество изменений и дополнений (включая изменение в БД).
-[*] Следствие 1: Совместимость текущего движка и базового движка утрачена.
-[*] Следствие 2: Фактически, движок является отдельным проектом.
-[*] Движок является свободным проектом, распространяемым по лицензии GPLv2.
-[*] Движок доступен для скачивания на github. Адрес проекта: http://github.com/supernova-ws/SuperNova
-[/list]
-Об этом сервере:[list=1]
-[*] [s]Форум переедет на отдельный домен. В нем будут разделы ОТДЕЛЬНО для старого сервера и ОТДЕЛЬНО для нового.[/s] [color=#FF0000]DONE![/color]
-[*] [s]Будет запущена новая офф-несовместимая вселенная (далее - СН), в которой будут использоваться мои собственные наработки. В частности, там будет полностью перебалансирован боевой движок, добавлены новые корабли и так далее. Размер новой вселенной - 3 галактики по 100 систем (возможно, будет изменено).[/s] [color=#FF0000]DONE![/color]
 [*] Старая вселенная ogame.triolan.com.ua (далее - ОГ) будет максимально приближен по механике к оригинальному oGame. В частности - будет переписан скорострел, что бы соответствовать оффу. Будут убраны возвраты ресурсов от ракетной атаки. И все такое.
 [*] ОГ и СН будут использовать один и тот же движок. Поэтому ни о каком "прекращении поддержки" ОГ речи НЕ ИДЕТ. ОГ будет поддерживаться наравне с СН. Все исправления багов и оптимизации будут распространятся на обе В. Возможно, что даже кое-какие изменения, не влияющие на баланс, будут перенесены из СН в ОГ.
-[/list]
-Локальный ToDo List по движку:[list=1]
-[*] На странице "Обзор Империи" выделять цветом производительно ресурсов в зависимости от % производства: 100% - белый, меньше 100% - красный
 [*] Удаление ракет из шахты
 [*] Возможность взрывать свои ракеты в полете
 [*] Ракеты: использовать таблиц флотов
 [*] Cохранение координат во Вселенной при смене активной планеты через дроп-даун лист (сохранение $_POST-запроса?)
 [*] Cохранение параметров флота (цель, миссия, выбранные корабли) на 1й-2й-3й странице при смене активной планеты через дроп-даун лист (сохранение $_POST-запроса?)
-[*] [s]Кнопка "Симулятор" в шпионском отчете, запускающий симуляцию с указанным флотом и техами.[/s] [color=#FF0000]DONE![/color]
-[*] [s]Переделать админскую страницу управления сервером в соответствии с добавленными параметрами сервера[/s] [color=#FF0000]DONE![/color]
-[*] [s]Интерфейс: выводить информацию о сервере: скорости итд[/s] [color=#FF0000]DONE![/color]
-[/list]
-Глобальный ToDo List по движку:[list=1]
 [*] Исправить куски, несовместимые с оффом - в частности боевой движок. Все остальное можно будет поправить "на лету".
-[*] Переписать модуль регистрации: регистрация, вход в игру, отсылка забытого
-пароля. [color=#FF0000]Переработаны формы регистрации и логина[/color]
-[*] [s]Самое главное - закрыть все известные дыры безопасности в коде движка. Без этого какая-либо реклама сервера приведет к наплыву юных хакеров.[/s] [color=#FF0000]DONE![/color]
-[*] [s]Отладить получившийся движок, убедившись, что модификации не сказались на его работоспособности.[/s] [color=#FF0000]DONE![/color]
-[*] [s]Написать модуль рефералок.[/s] [color=#FF0000]DONE![/color]
-[*] [s]Написать собственный счетчик - текущий начал подглюкивать и медленно грузиться.[/s] [color=#FF0000]DONE![/color]
-[*] Флот[list=1]
-[*] [s]Новый транспорт - "Супертранспорт"[/s] [color=#FF0000]DONE![/color]
+[*] Написать собственный счетчик - текущий начал подглюкивать и медленно грузиться.
 [*] Новый легкий корабль - штурмовик. Объединяет в себе функции тяжелого истребителя и легкого бомбардировщика. Очень дорогой.
 [*] Авианосец - быстроходный слабозащищенный корабль, позволяющий перевозить легкие корабли.
 [*] Пересмотр параметров Планетарной Защиты. Возможно, станет уникальным строением.
 [*] Пересмотр параметров "Сверхновой". "Сверхновая" станет уникальным кораблем.
 [*] (СН) Полный ребаланс кораблей и обороны.[list=1][/list]
-[/list]
 [*] Перки. Вместо или в дополнение к расам. Продаются за ТМ. Некоторые перки будут организованы в пары, делающие бессмысленным их совместную покупку[list=1]
 [*] Пара "Осторожный" - "Рисковый" - будет влиять на рэндом-генератор в бою. Первый - уменьшать разброс параметров, второй - увеличивать.
 [*] Пара "Защитник" - "Нападающий". Первый увеличивает броню за счет атаки, второй - атаку за счет брони. Возможно, будет добавлен третий - "Щитоносец". Назначение очевидно. Тогда уменьшаться будут два показателя, а не один.
@@ -90,32 +45,23 @@
 [*]Система офицеров будет переработана[list=1]
 [*] Офицеры будут разделены на Министров (Правителей?), Губернаторов и Наемников
 [*] Министры - аналог старых "офицеров": покупаются один раз и являются постоянными; найм имеет иерархическую структуру. Министры дают всеимперские бонусы, доступ к строительству сверхмощных структур и юнитов. Предварительный список: Командор, Бункер, Разрушитель, Убийца, Император
-[*] Губернаторы дают планетарные бонусы. На каждую планету можно поставить только одного губернатора. Бонусы будут идти к добыче, постройке, исследованию, верфи, защите итд. Предварительный список: Геолог, Инженер, Технократ, Конструктор, Спецалист, Защитник. Так же будут смешанные офицеры.
 [*] Наемники (Менеджеры?). По сути - временные офицеры. Дают всеимперские бонусы. Предварительный список: Шпион, Адмирал, Генерал
 [*] Менеджер "Карго-мастер" (замена Хранителя) - увеличивает емкость трюмов. Возможно - даст возможность выбирать, какие ресурсы загружать первыми. Скорее всего добавит миссию "Забрать", обратную миссии "Транспорт". Флот забирает с планеты-цели указанное количество ресурсов и возвращается на планету-исходник. Сбор ресурсов флотом, если есть разработчики. Слишком много всего - будет скорее всего разбит на двух министров
 [*] Менеджер "Секретарь" - расширяет возможности интерфейса. Добавит заметки на планеты и луны: дата последнего сканирования, персональная заметка (из закладок?)
 [/list]
 [*] Артефакты[list=1]
-[*] Коллапсарный генератор - дает еще один шанс на получение Луны из обломков на орбите
 [*] "Гиперпередатчик" - дает возможность послать один дополнительный приказ флоту в полете. Приказ "Экстренная посадка" - приземляет флот с миссией "Транспорт" в точке назначения. Приказ "Смена пункта назначения" позволяет изменить пункт назначения флота
-[*] "Быстырй старт" – позволит быстро отстроить базовые структуры на планете.
 [*] "Планетарный джамп-гейт" - дает возможность моментально перебросить корабли с места на место. Возможно, точка назначения будет ограничена лишь другим джамп-гейтом. Возможно, при использовании двух ПДГ можно будет перебрасывать флот с планеты на планету[/list]
 [*] Дипломатия. Можно будет заключать союзы между Альянсами, объявлять войну и так далее.[list=1]
-[*] "Нейтралитет" - дефолтное отношение между Альянсами.
-[*] "Война" - отменяет автозащиту башинга. Выставляется в одностороннем порядке.
 [*] "Союз" - запрещает атаку на планеты союзника.
 [*] "Федерация" - дает доступ к отдельным данным по Альянсу. Функционал пока под вопросом.
 [/list]
 [*] Новый черный рынок[list=1]
-[*] [s]Обновленный обмен ресурсов[/s] [color=#FF0000]DONE![/color]
-[*] [s]Обновленный супщик кораблей[/s] [color=#FF0000]DONE![/color]
-[*] [s]Покупка подержанных кораблей[/s] [color=#FF0000]DONE![/color]
 [*] Автоматическая биржа обмена ресурсов
 [*] Ломбард - можно будет занять ресурсы в долг под проценты. И не дай бог вам не отдать их вовремя!
 [*] Нормальная система обменов ресурсами между игроками с движковой протекцией.
 [/list]
 [*] Функционал "Банковская ячейка" - ресурсы можно сдать на хранение под отрицательный процент (чем дольше их хранишь - тем меньше остается). В банковской ячейке ресурсы переживают атаки. Пока не уверен, как буду реализовывать - через ЧР, через Офицеров или через отдельное здание (с соответствующей технологией)
-[*] Будет включена автозащита от башинга (или автобан - еще не решил)
 [*] Изменение начисления ТМ за атаки. Атаки неактивных игроков не будут приносить ТМ.
 [*] Переработка системы Экспедиций. Исправление ошибок. Количество получаемых ТМ будет зависеть от общей брони флота. Предварительный расчет: 1ТМ на 100.000 брони в пересчете на металл. Экспедиции 1 ЛИ уйдут в прошлое.
 [*] Возможно - система кораблей-"ветеранов" с набором опыта. В разработке. Если не придумаю, как сделать красиво - вычеркну. Если придумаю - сразу добавятся офицеры, здания, технологии.
@@ -127,7 +73,6 @@
 [*] Скрипт инсталляции
 [*] Скрипт апгрейда DB RageRepack до Сверхновой
 [*] Встроенная энциклопедия
-[*] [s]Продажа ТМ за деньги[/s] [color=#FF0000]DONE![/color]
 [*] При отложенном бое (т.е. когда обсчет боя происходит позже времени прибытия флота - например, на незагруженных серверах) ставить в отчете и сообщении (или оставлять риалтайм время?) время прибытия флота, а не время обсчета
 [/list]
 И ПОСТОЯННО. Дальнейшая оптимизация движка и устранение ошибок.
@@ -144,7 +89,6 @@
     "Player have negative resources"
 [*] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать
     всем по списку
-[*] Удалить поле `current_luna` из таблицы `users`
 [*] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
 [*] Чат: Интеграция AJAX Chat
 [*]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
@@ -157,19 +101,12 @@
     на то, следует ли передавать флот дальше в подпроцедуры обработки
 [*] BE_attackFleetFill.php: Нужна ли полная информация о флотах?
 [*] Интерфейс: позаменять везде 'd/m/Y h:i:s' на прописанное в конфиге
-[*] Движок: объединить DefensesBuildingPage.php и FleetBuildingPage.php
 [*] Не работает константа HIDE_1st_FROM_STATS - должна скрывать юзера 1 (админов?)
 [*] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
 [*] Интерфейс: отдельная таблица для текстовых материалов с поддержкой BBCode
 [*] Интерфейс: credit.php
 [*] Интерфейс: darkmatter.php - templatize!
 [*] Интерфейс: changelog.php - add changelogs
-[*] Движок: Почистить каталог language
-[*] Движок: Почистить каталог scripts
-[*] Движок: Почистить каталог templates
-[*] Движок: Почистить каталог js
-[*] Движок: Почистить каталог includes
-[*] [s]Движок: fleetback.php -> fleet.php[/s] [color=#FF0000]DONE![/color]
 [*] Движок: infos.php - разбить на подпроцедуры
 [*] Интерфейс, RPG: Make empire work only with Emperor
 [*] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через глобальные переменные $_POST
