misc-ALI-33a6: Added server ally logo. Also added player settings to disable display of logos and avatars on Universe page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -18,9 +18,17 @@
     картинки будут отмасштабированы до размеров 128х128
     Аватар отображается на странице "Император" и в попапе игрока  на  странице
     "Вселенная"
+[!] Альянс: Добавлена поддержка серверных логотипов  Альянсов.  Логотипы  могут
+    быть  загружены  с  локального  диска  на  странице  управления   Альянсом.
+    Поддерживаются файлы форматов JPG, GIF и PNG размером до 200КБ. Загруженные
+    картинки будут отмасштабированы до размеров 128х128
+    Логотип отображается на странице информации об Альянсе и в  попапе  Альянса
+    на странице "Вселенная"
 
 [+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
     игрока на странице "Вселенная"
+[+] Настройки: Отображение логотипов Альянсов и аватаров  игроков  на  странице
+    "Вселенная" может быть отключено в настройках игроков
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
@@ -41,6 +49,8 @@
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
     корректно настроен временный каталог и движку должна быть разрешена  запись
     в каталог /images/avatar
+    Максимальный размер аватара настраивается  в  таблице  `config`  переменные
+    avatar_max_width и avatar_max_height
 [@] Пол: В скины добавлена иконка пола в подкаталог "images" скина.  Файлы  для
     мужского  и  женского  пола  называются  соответственно  "sex_male.png"   и
     "sex_female.png". Встроенные скины обновлены автоматически
