--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,9 +9,52 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a5
+Текущая версия 33a7
 -------------------
 
+[!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
+    поддержка постоянных Наемников (ПН). Тип Наемников выбирается в  настройках
+    сервера
+    1. ВН (как следует из названия) не являются постоянными,  а  нанимаются  на
+    определенный срок. По истечению срока Наемник исчезает
+    2. В режиме ВН отсутствует понятие "веток развития" и  для  найма  доступны
+    сразу все Наемники. Соответственно не отображаются требования  к  Наемникам
+    на странице "Технологии"
+    3. Базовая цена покупки ПН в режиме ВН становится ценой  найма  на  базовый
+    период найма (БПН). По умолчанию он равен одному среднекаелндарному  месяцу
+    (30 дней, 2592000 секунд). Изменить БПН можно на странице настроек сервера
+    4. Предусмотрена система скидок/наценок  в  зависимости  от  срока  покупки
+    Наемника.  Настройки  содержатся  в  массиве  $mrc_hire_discount  в   файле
+    /officer.php.  Индекс  элемента  -  количество  секунд  найма,  значение  -
+    коэффициент скидки. "1" означает, что  на  данный  интервал  найма  нет  ни
+    наценки, ни скидки и при пересчете на количество секунд в БПН его стоимость
+    будет в точности равна стоимости БПН.  Если  число  меньше  единицы  -  это
+    означает скидку; больше единицы - наценку
+    5.  После  рекрутирования  Наемника  невозможно  изменить  его  уровень  до
+    окончания срока действия найма
+    6. Режим Наемников отображается на странице "Мировые константы"
+    При переключении режима Наемников следует учитывать следующие особенности:
+    1.  При  включении  ВН  все  постоянные  Наемники  будут  преобразованы  во
+    временные со сроком действия равному БПН. В случае  необходимости  изменить
+    БПН нужно СНАЧАЛА его изменить, а затем переключать режим работы Наемников
+    2. После включения ВН изменение базового интервала найма не влияет  на  уже
+    рекрутированных Наемников, а влияет только на цену нового найма
+    3.  При  отключении  ВН  все  активные  на  этот  момент   Наемники   будут
+    преобразованы в постоянные - вне зависимости от того,  на  какой  срок  они
+    были наняты и сколько времени осталось до срока истечения найма. Информация
+    о сроках найма при этом теряется
+    4.  При  отключении  ВН  активизируются   ограничения   по   рекрутированию
+    Наемников, однако уже нанятые Наемники останутся активными и  будут  влиять
+    на игру вне зависимости от того, может  игрок  их  купить  или  нет.  Такой
+    способ переключение выбран для исключения потери ТМ, вложенных  игроками  в
+    Наемников
+    Переработана  страница  рекуртирования  Наемников:
+    1. Добавлена поддержка временных Наемников
+    2. Стоимость найма  отображается  динамически  в  зависимости  от  текущего
+    режима Наемников, выбранного уровня и срока найма
+    3. В режиме ПН видны все наемники - даже  недоступные  (с  соответствующими
+    пояснениями)
+    4. В режиме ПН можно нанимать сразу несколько уровней Наемников
 [!] Аватары: Добавлена поддержка серверных аватаров игроков. Аватары могут быть
     загружены  с  локального   диска   на   странице   настроек   пользователя.
     Поддерживаются файлы форматов JPG, GIF и PNG размером до 200КБ. Загруженные
@@ -42,6 +85,7 @@
     количество ресурсов, но и  их  качество.  Время  постройки  нормированы  по
     дейтрию, т.е. постройки с большей долей  низкоуровневых  ресурсов  строятся
     быстрее
+[~] Админка: Добавлены label for для всех чекбоксов
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 
