feat-UNI-33a8: Galaxy and system can have own names issued by players

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a7
+Текущая версия 33a8
 -------------------
 
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
@@ -67,6 +67,27 @@
     картинки будут отмасштабированы до размеров 128х128
     Логотип отображается на странице информации об Альянсе и в  попапе  Альянса
     на странице "Вселенная"
+[!] Вселенная: Галактики и системы могут иметь собственные названия!
+    1. По умолчанию галактики и системы не имеют собственных названий
+    2. Увидеть текущее имя галактики или системы можно на странице "Вселенная"
+    3.  Назвать  галактику  или  систему  можно   по   ссылке   "Переименовать"
+    соответственно  возле  координат  галактики   или   системы   на   странице
+    "Вселенная"
+    4. Именование галактики или системы имеет  соотвествующую  стоимость  -  по
+    умолчанию 10000 ТМ для галактики и 1000 ТМ  для  системы  -  т.н.  "базовую
+    стоимость  именования".  Изменить  базовую  стоимость  именования  можно  в
+    настройках  сервера.  Игроки  могут  видеть   текущую   базовую   стоимость
+    именования на странице "Мировые константы"
+    5.  При  именовании  галактики  или  системы  игрок  может  назначить  цену
+    именования. Минимальная цена именования равна базовой стоимости именования
+    6. При переименовании уже именованной галактики или системы,  игрок  должен
+    уплатить ранее назначенную  стоимость  именования  плюс  базовая  стоимость
+    именования. Таким образом,  если  первый  игрок  назначил  цену  именования
+    системы в 2500 ТМ, а базовая цена именования системы составляет 1000 ТМ, то
+    игрок, желающий переименовать ту же систему должен уплатить не меньше  3500
+    ТМ. Таким образом более высокая цена именования  галактики  или  системы  в
+    определенной степени защищает объект от переименования
+    7. Как было сказано в п.2, имя галактики и системы видны всем игрокам
 
 [+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
     игрока на странице "Вселенная"
